--- a/generar-archivo.html
+++ b/generar-archivo.html
@@ -16,20 +16,21 @@
                 throw new Error("No se encontró el parámetro 'data'.");
             }
 
-            // Decodificar el contenido de la URL
-            data = decodeURIComponent(data);
+            // Normalizar caracteres problemáticos antes de decodificar
+            data = data.replaceAll("%%", "%25%") // Reemplazar dobles porcentajes
+                       .replaceAll("%,", ",")   // Reparar comas conflictivas
+                       .replaceAll("%20", " ") // Reemplazar espacios codificados
+                       .replaceAll("%0A", "\n") // Saltos de línea
+                       .replaceAll("%22", '"'); // Comillas dobles
 
-            // Normalizar caracteres conflictivos (ajustar según tu caso)
-            data = data.replaceAll("%,", ",") // Remover codificaciones conflictivas
-                       .replaceAll("%%", "%") // Resolver dobles porcentajes
-                       .replaceAll("%22", '"') // Decodificar comillas
-                       .replaceAll("%0A", "\n"); // Decodificar saltos de línea
+            // Decodificar el contenido
+            const decodedData = decodeURIComponent(data);
 
             // Crear el archivo CSV
-            const blob = new Blob([data], { type: "text/csv;charset=utf-8;" });
+            const blob = new Blob([decodedData], { type: "text/csv;charset=utf-8;" });
             const link = document.createElement("a");
             link.href = URL.createObjectURL(blob);
-            link.download = "archivo_generado.csv"; // Cambia el nombre si es necesario
+            link.download = "archivo_generado.csv";
             document.body.appendChild(link);
             link.click();
             document.body.removeChild(link);
