--- a/generar-archivo.html
+++ b/generar-archivo.html
@@ -7,38 +7,22 @@
 </head>
 <body>
     <script>
-        try {
-            // Obtener el contenido de la URL
-            const urlParams = new URLSearchParams(window.location.search);
-            let data = urlParams.get("data");
+        // Obtener el contenido de la URL
+        const urlParams = new URLSearchParams(window.location.search);
+        const data = urlParams.get("data") || "Sin contenido";
 
-            if (!data) {
-                throw new Error("No se encontró el parámetro 'data'.");
-            }
+        // Decodificar el contenido
+        const decodedData = decodeURIComponent(data);
 
-            // Normalizar caracteres problemáticos antes de decodificar
-            data = data.replaceAll("%%", "%25%") // Reemplazar dobles porcentajes
-                       .replaceAll("%,", ",")   // Reparar comas conflictivas
-                       .replaceAll("%20", " ") // Reemplazar espacios codificados
-                       .replaceAll("%0A", "\n") // Saltos de línea
-                       .replaceAll("%22", '"'); // Comillas dobles
-
-            // Decodificar el contenido
-            const decodedData = decodeURIComponent(data);
-
-            // Crear el archivo CSV
-            const blob = new Blob([decodedData], { type: "text/csv;charset=utf-8;" });
-            const link = document.createElement("a");
-            link.href = URL.createObjectURL(blob);
-            link.download = "archivo_generado.csv";
-            document.body.appendChild(link);
-            link.click();
-            document.body.removeChild(link);
-        } catch (error) {
-            console.error("Error al procesar la URL:", error);
-            alert("Hubo un error al procesar los datos. Por favor, revisa la URL.");
-        }
+        // Crear el archivo y descargarlo
+        const blob = new Blob([decodedData], { type: "text/plain" });
+        const link = document.createElement("a");
+        link.href = URL.createObjectURL(blob);
+        link.download = "archivo_generado.txt"; // Cambia el nombre según sea necesario
+        document.body.appendChild(link);
+        link.click();
+        document.body.removeChild(link);
     </script>
-    <p>Generando archivo... Si la descarga no inicia automáticamente, revisa la configuración del navegador.</p>
+    <p>Generando archivo... Si la descarga no inicia, revisa la configuración del navegador.</p>
 </body>
 </html>
