--- a/generar-archivo.html
+++ b/generar-archivo.html
@@ -10,11 +10,15 @@
         try {
             // Obtener el parámetro "data" de la URL
             const urlParams = new URLSearchParams(window.location.search);
-            const jsonData = urlParams.get("data");
+            let jsonData = urlParams.get("data");
 
             if (!jsonData) {
                 throw new Error("No se encontró el parámetro 'data' en la URL.");
             }
+
+            // Normalizar caracteres conflictivos antes de procesar
+            jsonData = jsonData.replaceAll("%%", "%25%") // Resolver dobles porcentajes
+                               .replaceAll("%22", '"');  // Resolver comillas dobles
 
             // Decodificar y parsear el JSON recibido
             const parsedData = JSON.parse(decodeURIComponent(jsonData));
@@ -33,7 +37,7 @@
             const blob = new Blob([csvContent], { type: "text/csv;charset=utf-8;" });
             const link = document.createElement("a");
             link.href = URL.createObjectURL(blob);
-            link.download = "archivo_generado.csv"; // Nombre del archivo
+            link.download = "archivo_generado.csv";
             document.body.appendChild(link);
             link.click();
             document.body.removeChild(link);
