--- a/generar-archivo.html
+++ b/generar-archivo.html
@@ -3,48 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Generar Archivo</title>
+    <title>Generar Archivo CSV</title>
 </head>
 <body>
     <script>
-        try {
-            // Obtener el parámetro "data" de la URL
-            const urlParams = new URLSearchParams(window.location.search);
-            const jsonData = urlParams.get("data");
+        // Obtener el contenido de la URL
+        const urlParams = new URLSearchParams(window.location.search);
+        const data = urlParams.get("data") || "Columna1,Columna2,Columna3\nDato1,Dato2,Dato3";
 
-            if (!jsonData) {
-                throw new Error("No se encontró el parámetro 'data' en la URL.");
-            }
+        // Decodificar el contenido
+        const decodedData = decodeURIComponent(data);
 
-            // Decodificar el JSON codificado en la URL
-            const decodedData = decodeURIComponent(jsonData);
-            
-            // Parsear el JSON a un objeto
-            const parsedData = JSON.parse(decodedData);
-
-            // Validar que el JSON contiene "header" y "data"
-            if (!parsedData.header || !parsedData.data) {
-                throw new Error("El JSON recibido no contiene los campos 'header' o 'data'.");
-            }
-
-            // Construir el contenido del CSV
-            const header = parsedData.header.join(",");
-            const rows = parsedData.data.map(row => row.join(",")).join("\n");
-            const csvContent = `${header}\n${rows}`;
-
-            // Crear y descargar el archivo CSV
-            const blob = new Blob([csvContent], { type: "text/csv;charset=utf-8;" });
-            const link = document.createElement("a");
-            link.href = URL.createObjectURL(blob);
-            link.download = "archivo_generado.csv";
-            document.body.appendChild(link);
-            link.click();
-            document.body.removeChild(link);
-        } catch (error) {
-            console.error("Error al procesar el JSON:", error);
-            alert("Hubo un error al procesar los datos. Por favor, verifica la URL.");
-        }
+        // Crear el archivo y descargarlo
+        const blob = new Blob([decodedData], { type: "text/csv" });
+        const link = document.createElement("a");
+        link.href = URL.createObjectURL(blob);
+        link.download = "archivo_generado.csv"; // Cambia el nombre según sea necesario
+        document.body.appendChild(link);
+        link.click();
+        document.body.removeChild(link);
     </script>
-    <p>Generando archivo... Si la descarga no inicia automáticamente, revisa la configuración del navegador.</p>
+    <p>Generando archivo... Si la descarga no inicia, revisa la configuración del navegador.</p>
 </body>
 </html>
