--- a/generar-archivo.html
+++ b/generar-archivo.html
@@ -7,57 +7,69 @@
 </head>
 <body>
     <script>
-        // Obtener el contenido de la URL
-        const urlParams = new URLSearchParams(window.location.search);
-        const data = urlParams.get("data") || "[Columna1];[Columna2];[Columna3]Dato1;Dato2;Dato3";
+    // Obtener el contenido de la URL
+    const urlParams = new URLSearchParams(window.location.search);
+    let data = urlParams.get("data") || "";
 
+    let decodedData = "";
+
+    try {
         // Decodificar el contenido
-        const decodedData = decodeURIComponent(data);
+        decodedData = decodeURIComponent(data);
+    } catch (error) {
+        console.error("Error al decodificar la data:", error);
+        alert("La información de la URL no está correctamente codificada.");
+        document.body.innerHTML = "<p>Error: No se pudo procesar la información.</p>";
+        throw error;
+    }
 
-        // Procesar los datos
-        const processCSVData = (data) => {
-            // Detectar encabezados (línea que comienza con '[' y termina con ']')
-            const headerRegex = /^\[(.+?)\]/;
-            const headerMatch = data.match(headerRegex);
-            if (!headerMatch) {
-                alert("Formato incorrecto: no se detectaron encabezados.");
-                return "";
-            }
-
-            // Extraer encabezados y limpiarlos de los corchetes
-            const headers = headerMatch[1].split(";").map(header => header.trim());
-            const separatorCount = headers.length;
-
-            // Dividir el resto de los datos
-            const dataRows = data
-                .replace(headerRegex, "") // Eliminar encabezados con corchetes
-                .split(new RegExp(`([^;]*;){${separatorCount - 1}}[^;]*`)) // Dividir por la cantidad esperada de separadores
-                .filter(row => row.trim() !== ""); // Eliminar filas vacías
-
-            // Construir CSV
-            let csvContent = headers.join(",") + "\n"; // Encabezados separados por coma
-            csvContent += dataRows
-                .map(row => row.split(";").join(",")) // Reemplazar ";" por ","
-                .join("\n"); // Unir filas con saltos de línea
-
-            return csvContent;
-        };
-
-        const csvData = processCSVData(decodedData);
-
-        if (csvData) {
-            // Crear el archivo y descargarlo
-            const blob = new Blob([csvData], { type: "text/csv" });
-            const link = document.createElement("a");
-            link.href = URL.createObjectURL(blob);
-            link.download = "archivo_generado.csv";
-            document.body.appendChild(link);
-            link.click();
-            document.body.removeChild(link);
-        } else {
-            document.body.innerHTML = "<p>Error: no se pudo generar el archivo CSV.</p>";
+    // Procesar los datos
+    const processCSVData = (data) => {
+        // Detectar encabezados (línea que comienza con '[' y termina con ']')
+        const headerRegex = /^\[(.+?)\]/;
+        const headerMatch = data.match(headerRegex);
+        if (!headerMatch) {
+            alert("Formato incorrecto: no se detectaron encabezados.");
+            return "";
         }
-    </script>
+
+        // Extraer encabezados y limpiarlos de los corchetes
+        const headers = headerMatch[1].split(";").map(header => header.trim());
+        const separatorCount = headers.length;
+
+        // Dividir el resto de los datos en filas
+        const dataRows = data
+            .replace(headerRegex, "") // Eliminar encabezados con corchetes
+            .split("\n") // Dividir por salto de línea
+            .filter(row => row.trim() !== ""); // Eliminar filas vacías
+
+        // Verificar si las filas tienen la cantidad correcta de columnas
+        const validRows = dataRows.filter(row => row.split(";").length === separatorCount);
+
+        // Construir CSV
+        let csvContent = headers.join(",") + "\n"; // Encabezados separados por coma
+        csvContent += validRows
+            .map(row => row.split(";").join(",")) // Reemplazar ";" por ","
+            .join("\n"); // Unir filas con saltos de línea
+
+        return csvContent;
+    };
+
+    const csvData = processCSVData(decodedData);
+
+    if (csvData) {
+        // Crear el archivo y descargarlo
+        const blob = new Blob([csvData], { type: "text/csv" });
+        const link = document.createElement("a");
+        link.href = URL.createObjectURL(blob);
+        link.download = "archivo_generado.csv";
+        document.body.appendChild(link);
+        link.click();
+        document.body.removeChild(link);
+    } else {
+        document.body.innerHTML = "<p>Error: no se pudo generar el archivo CSV.</p>";
+    }
+</script>
     <p>Generando archivo... Si la descarga no inicia, revisa la configuración del navegador.</p>
 </body>
 </html>
