--- a/generar-archivo.html
+++ b/generar-archivo.html
@@ -3,9 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Generar Archivo Excel</title>
-    <!-- Agregar la biblioteca SheetJS -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
+    <title>Generar Archivo CSV</title>
 </head>
 <body>
     <script>
@@ -16,34 +14,11 @@
         // Decodificar el contenido
         const decodedData = decodeURIComponent(data);
 
-        // Procesar los datos y convertirlos en un array para Excel
-        const rows = decodedData.split("\n").map(row => row.split(","));
-
-        // Crear un libro de Excel y una hoja de trabajo
-        const workbook = XLSX.utils.book_new();
-        const worksheet = XLSX.utils.aoa_to_sheet(rows);
-
-        // Agregar la hoja al libro
-        XLSX.utils.book_append_sheet(workbook, worksheet, "Hoja1");
-
-        // Función para convertir el binario a un Blob
-        function s2ab(s) {
-            const buf = new ArrayBuffer(s.length);
-            const view = new Uint8Array(buf);
-            for (let i = 0; i < s.length; i++) {
-                view[i] = s.charCodeAt(i) & 0xFF;
-            }
-            return buf;
-        }
-
-        // Generar el archivo Excel como binario
-        const excelBinary = XLSX.write(workbook, { bookType: "xlsx", type: "binary" });
-        const blob = new Blob([s2ab(excelBinary)], { type: "application/octet-stream" });
-
-        // Descargar el archivo
+        // Crear el archivo y descargarlo
+        const blob = new Blob([decodedData], { type: "text/csv" });
         const link = document.createElement("a");
         link.href = URL.createObjectURL(blob);
-        link.download = "archivo_generado.xlsx"; // Cambia el nombre según sea necesario
+        link.download = "archivo_generado.csv"; // Cambia el nombre según sea necesario
         document.body.appendChild(link);
         link.click();
         document.body.removeChild(link);
