--- a/generar-archivo.html
+++ b/generar-archivo.html
@@ -14,11 +14,14 @@
         // Decodificar el contenido
         const decodedData = decodeURIComponent(data);
 
+        // Reemplazar el separador , por ;
+        const modifiedData = decodedData.replace(/,/g, ";");
+
         // Crear el archivo y descargarlo
-        const blob = new Blob([decodedData], { type: "text/csv" });
+        const blob = new Blob([modifiedData], { type: "text/csv" });
         const link = document.createElement("a");
         link.href = URL.createObjectURL(blob);
-        link.download = "archivo_generado.csv"; // Cambia el nombre según sea necesario
+        link.download = "Descarga_PBA.csv"; // Cambia el nombre según sea necesario
         document.body.appendChild(link);
         link.click();
         document.body.removeChild(link);
