--- a/generar-excel.html
+++ b/generar-excel.html
@@ -18,6 +18,12 @@
 
         // Procesar los datos y convertirlos en un array para Excel
         const rows = decodedData.split("\n").map(row => row.split(","));
+        
+        // Reemplazar el separador , por ;
+        const modifiedData = decodedData.replace(/,/g, ";");
+
+       // Reemplazar el separador . por .
+        const modifiedData = decodedData.replace(/./g, ",");
 
         // Crear un libro de Excel y una hoja de trabajo
         const workbook = XLSX.utils.book_new();
