--- a/generar-grafico.html
+++ b/generar-grafico.html
@@ -3,75 +3,69 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Generar Archivo Excel con Gráfico</title>
-    <!-- Agregar la biblioteca ExcelJS -->
+    <title>Generar Excel con Gráfico</title>
+    <!-- Biblioteca ExcelJS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/exceljs/4.3.0/exceljs.min.js"></script>
 </head>
 <body>
     <script>
-        // Obtener el contenido de la URL
+        // Obtener datos de la URL
         const urlParams = new URLSearchParams(window.location.search);
-        const data = urlParams.get("data") || "Columna1,Columna2,Columna3,Columna4,Columna5,Columna6,Columna7\nDato1,Dato2,DatoX,Dato4,Dato5,Estatal,3000\nDato1,Dato2,DatoY,Dato4,Dato5,Privado,2000";
+        const data = urlParams.get("data") || "Columna1,Columna2,Columna3\nDato1,Dato2,Dato3";
 
         // Decodificar el contenido
         const decodedData = decodeURIComponent(data);
 
-        // Procesar los datos y convertirlos en un array
+        // Convertir los datos en un array
         const rows = decodedData.split("\n").map(row => row.split(","));
 
-        // Crear un libro de Excel
-        const workbook = new ExcelJS.Workbook();
-        const worksheet = workbook.addWorksheet("Datos");
+        // Crear archivo Excel con ExcelJS
+        async function generateExcel() {
+            const workbook = new ExcelJS.Workbook();
+            const worksheet = workbook.addWorksheet("Datos");
 
-        // Agregar los datos al Excel
-        rows.forEach((row, index) => {
-            worksheet.addRow(row);
-        });
+            // Agregar los datos al Excel
+            rows.forEach(row => worksheet.addRow(row));
 
-        // Agregar un gráfico de barras
-        const chartWorksheet = workbook.addWorksheet("Gráfico");
-        const chart = chartWorksheet.addChart({
-            type: "bar",
-            data: {
-                categories: rows.slice(1).map(row => row[2]), // Columna 3 (Eje X)
-                series: [
-                    {
-                        name: rows[0][6], // Columna 6 (Leyenda)
-                        values: rows.slice(1).map(row => parseFloat(row[6] || 0)) // Columna 7 (Valores Eje Y)
-                    }
-                ]
-            },
-            legend: {
-                position: "bottom"
-            },
-            title: {
-                text: "Gráfico de Ejemplo"
-            }
-        });
+            // Insertar un módulo VBA
+            workbook.vbaProject = workbook.addVBAProject();
+            workbook.vbaProject.addModule("Module1", `
+Sub AddChart()
+    Dim ws As Worksheet
+    Dim chartObj As ChartObject
+    Set ws = ThisWorkbook.Sheets("Datos")
 
-        // Generar el archivo Excel
-        async function downloadExcel() {
+    ' Crear gráfico
+    Set chartObj = ws.ChartObjects.Add(100, 100, 400, 300)
+    With chartObj.Chart
+        .ChartType = xlColumnClustered
+        .SetSourceData ws.Range("C2:C" & ws.Cells(ws.Rows.Count, "C").End(xlUp).Row & ",G2:G" & ws.Cells(ws.Rows.Count, "G").End(xlUp).Row)
+        .HasTitle = True
+        .ChartTitle.Text = "Gráfico Generado"
+        .Axes(xlCategory).HasTitle = True
+        .Axes(xlCategory).AxisTitle.Text = "Eje X"
+        .Axes(xlValue).HasTitle = True
+        .Axes(xlValue).AxisTitle.Text = "Eje Y"
+    End With
+End Sub
+            `);
+
+            // Generar el archivo
             const buffer = await workbook.xlsx.writeBuffer();
             const blob = new Blob([buffer], {
-                type: "application/vnd.openxmlformats-officedocument.spreadsheetml.sheet"
+                type: "application/vnd.openxmlformats-officedocument.spreadsheetml.sheet",
             });
 
             // Descargar el archivo
             const link = document.createElement("a");
             link.href = URL.createObjectURL(blob);
-            link.download = "Descarga_PBA_ConGrafico.xlsx"; // Cambia el nombre según sea necesario
+            link.download = "archivo_con_grafico.xlsm";
             document.body.appendChild(link);
             link.click();
             document.body.removeChild(link);
-
-            // Cerrar la pestaña después de un breve retraso
-            setTimeout(() => {
-                window.close();
-            }, 1000); // Espera 1 segundo para asegurar la descarga antes de cerrar
         }
 
-        // Llamar a la función para generar y descargar el archivo
-        downloadExcel();
+        generateExcel();
     </script>
     <p>Generando archivo... Si la descarga no inicia, revisa la configuración del navegador.</p>
 </body>
